# rhoso-api-docs-builder

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: architecture.md  contributing.md  output-contract.md  release-mapping.md  source-policy.md
scripts/: check.sh
site/: index.html  styles.css
site/validation/18.0/: index.html
site/validation/18.0/apis/compute-nova/: index.html
site/validation/19.0/: index.html
src/rhoso_api_docs_builder/: __init__.py  catalog.py  cli.py  generator.py  models.py  slug.py
tests/: test_catalog.py  test_cli.py  test_generator.py
validation/18.0/: index.md  manifest.json  supported-services.json
validation/18.0/apis/bare-metal-provisioning-ironic/: index.md  metadata.json
validation/18.0/apis/block-storage-cinder/: index.md  metadata.json
validation/18.0/apis/compute-nova/: index.md  metadata.json
validation/18.0/apis/dns-designate/: index.md  metadata.json
validation/18.0/apis/identity-keystone/: index.md  metadata.json
validation/18.0/apis/image-glance/: index.md  metadata.json
validation/18.0/apis/key-management-barbican/: index.md  metadata.json
validation/18.0/apis/load-balancing-octavia/: index.md  metadata.json
validation/18.0/apis/networking-neutron/: index.md  metadata.json
validation/18.0/apis/object-storage-swift/: index.md  metadata.json
validation/18.0/apis/orchestration-heat/: index.md  metadata.json
validation/18.0/apis/placement-placement/: index.md  metadata.json
validation/18.0/apis/shared-file-systems-manila/: index.md  metadata.json
(+12 files in other folders)
