[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rhoso-api-docs-builder"
version = "0.1.0"
description = "Build Red Hat-styled RHOSO API validation documentation from public source metadata."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "gprocunier", email = "gprocunier@users.noreply.github.com" }
]
keywords = ["rhoso", "openstack", "red-hat", "documentation", "api"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: System :: Systems Administration",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
rhoso-api-docs-builder = "rhoso_api_docs_builder.cli:main"

[project.urls]
Homepage = "https://github.com/gprocunier/rhoso-api-docs-builder"
Issues = "https://github.com/gprocunier/rhoso-api-docs-builder/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
